# sensor-reading

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
source/: gunicorn.conf.py
source/apps/sensors/: apps.py  models.py  tasks.py  tests.py
source/apps/sensors/api/v1/: serializers.py  tests.py  urls.py  views.py
source/apps/sensors/migrations/: 0001_initial.py
source/base/: __init__.py  asgi.py  celery.py  wsgi.py
source/base/settings/: __init__.py  base.py  dev.py  prod.py  staging.py  test.py
source/base/urls/: __init__.py
source/base/urls/api/: __init__.py  v1.py
source/fixtures/: sensor_readings.json  sensors.json
source/services/: __init__.py  api.py  tasks.py  tests.py
